Update repo markdown

--- a/admin/meetings/120321-final.md
+++ b/admin/meetings/120321-final.md
@@ -26,12 +26,31 @@
 
 ### Previous Meeting
 
+-   Canvas assignments
+-   Assigning further tasks
+
 ### Current Meeting
 
 -   Reviewing Canvas assignments
 -   Assigning further tasks
+-   Manager updates (final priorities, conclusion)
 
-### For next time!
+---
+
+## Final Priorities
+
+-   Final pipeline
+-   Wiki
+-   Worry about only finishing 2/3 add-on features
+    -   Speech recognition
+    -   Meal planner
+    -   Grocery list
+-   Canvas assignments
+    -   Team member evaluations
+        -   Avoid being personal!
+    -   Status videos
+        -   Public (short)
+        -   Private (longer & serious)
 
 ---
 
