--- a/admin/meetings/112421-sprint-3.md
+++ b/admin/meetings/112421-sprint-3.md
@@ -2,15 +2,11 @@
 
 ## Info
 
-### Main Topics
-
--   (Work in progress)
-
 ### Time & Place
 
 -   Group 5
--   Friday, November 24, 2021
--   11am @ https://ucsd.zoom.us/my/sanatbhandarkar
+-   Wednesday, November 24, 2021
+-   10am @ https://ucsd.zoom.us/my/sanatbhandarkar
 
 ### Attendance
 
@@ -30,13 +26,20 @@
 
 ### Previous Meeting
 
+-   Sprint 1 review & retrospective meetings recap
+-   Sprint 2 backend task updates
+-   Sprint 3 planning
+
 ### Current Meeting
+
+-   Canvas assignments
+-   Assigning further tasks
 
 ### For next time!
 
----
-
-## Section 1
+-   Reviewing Canvas assignments
+-   Assigning further tasks
+-   Manager updates (final priorities, conclusion)
 
 ---
 
@@ -44,19 +47,13 @@
 
 ### Remaining Questions / Concerns
 
--   Question 1
--   Concern 1
-
 ---
 
 ## Decisions & Takeaways
 
--   Decision
-    -   Reason 1
-    -   Reason 2
-    -   Counterpoints
-        -   Counterpoint 1
+-   See GitHub issue board for newly assigned tasks
+-   Use Slack to communicate about Canvas assignments
 
 ---
 
-Meeting finish time:
+Meeting finish time: 10:55am (55 min)
